refactors to prepae for Mediawiki 1.24 support - better error handling e.g. 404 - better token handling with TokenMode depending on version